# fluxion

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE-THIRD-PARTY.md  README.md
assets/icons/: fluxion725x725.icns
project/compile-options/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/API/: CMakeLists.txt
src/API/docs/: code.puml  interface.puml  state.puml
src/API/include/Fluxion/API/: Data.hpp  DataFormatters.hpp  DataIO.hpp  IFluxionPlugin.hpp
src/API/include/Fluxion/API/Data/: Common.hpp
src/API/include/Fluxion/API/LogsPlugin/: IFluxionLogsPlugin.hpp  PluginBridge.hpp
src/API/src/: Data.cpp
src/Api/: CMakeLists.txt  Data.cpp  Data.hpp  DataIO.hpp  IFluxionPlugin.hpp
src/Api/include/Fluxion/API/: Data.hpp  DataIO.hpp  IFluxionPlugin.hpp
src/Application/: AppState.cpp  AppState.hpp  CMakeLists.txt  DummyPlugin.hpp  Fluxion.cpp  Fluxion.hpp
src/Application/Data/docs/: state.puml
src/Application/Data/include/Fluxion/Application/Data/: AppState.hpp  Data.hpp  Formatters.hpp
src/Application/Data/src/: AppState.cpp  Data.cpp
src/Application/Layers/: BaseLayer.cpp  BaseLayer.hpp  DebugLayer.cpp  DebugLayer.hpp  FiltersLayer.cpp  FiltersLayer.hpp  FluxionBaseLayer.cpp  FluxionBaseLayer.hpp  LogsViewLayer.cpp  LogsViewLayer.hpp  MainMenuLayer.cpp  MainMenuLayer.hpp
src/Application/Layers/DebugLayer/: DebugLayer.cpp  DebugLayer.hpp
src/Application/Layers/DebugLayer/Modules/: Logger.cpp  Logger.hpp  Theme.cpp  Theme.hpp
src/Application/Layers/DevLayer/: DevLayer.cpp  DevLayer.hpp
src/Application/Layers/DevLayer/Modules/: Logger.cpp  Logger.hpp  Theme.cpp  Theme.hpp
src/Application/Layers/FiltersLayer/: FiltersLayer.cpp  FiltersLayer.hpp  FiltersLayerActions.cpp  FiltersLayerActions.hpp
src/Application/Layers/LogsViewLayer/: LogsViewLayer.cpp  LogsViewLayer.hpp  LogsViewLayerActions.cpp  LogsViewLayerActions.hpp
src/Application/Layers/SettingsLayer/: SettingsLayer.cpp  SettingsLayer.hpp
src/Application/Layers/SettingsLayer/Modules/: LogsPlugin.cpp  LogsPlugin.hpp  Theme.cpp  Theme.hpp
src/Application/Layers/docs/: code.puml  interface.puml  state.puml
src/Application/Layers/docs/BaseLayer/: interface.puml  state.puml
src/Application/Layers/docs/DevLayer/: interface.puml
src/Application/Layers/docs/FiltersLayer/: code.puml  state.puml
src/Application/Layers/docs/MainMenuLayer/: code.puml
src/Core/Common/: CMakeLists.txt  DynArray.hpp  DynamicLibrary.cpp  DynamicLibrary.hpp  Ref.hpp  TWithFlags.hpp  UniqueID.cpp  UniqueID.hpp
src/Core/Logger/: Ansi.cpp  Ansi.hpp  CMakeLists.txt  LogFormatter.cpp  LogFormatter.hpp  Logger.cpp  Logger.hpp
src/Fluxion/Data/: CMakeLists.txt
src/Fluxion/Data/docs/: code.puml  interface.puml
src/Fluxion/Data/include/Fluxion/Data/: AppState.hpp  Data.hpp
src/Fluxion/Data/src/: AppState.cpp  Data.cpp
src/Graphite/: CMakeLists.txt
src/Graphite/Application/: CMakeLists.txt  TGraphiteApplication.hpp  WindowConfiguration.hpp
src/Graphite/Application/Layers/: TLayer.hpp  TSoftCloseableLayer.hpp
src/Graphite/Application/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.mm
src/Graphite/Application/Renderer/Backends/Metal/: MetalRenderer.hpp  MetalRenderer.mm
src/Graphite/Application/Renderer/Backends/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.hpp
src/Graphite/Application/docs/: code.puml  interface.puml  state.puml
src/Graphite/Application/include/Graphite/Application/: TActionQueue.hpp  TGraphiteApplication.hpp
src/Graphite/Application/include/Graphite/Application/Layers/: TLayer.hpp  TSoftCloseableLayer.hpp
src/Graphite/Application/include/Graphite/Application/Layers/Utility/: TDispatcher.hpp
src/Graphite/Application/include/Graphite/Application/Layers/Utils/: TDispatcher.hpp
src/Graphite/Application/src/Renderer/: CMakeLists.txt
src/Graphite/Application/src/Renderer/docs/: code.puml  interface.puml  state.puml
src/Graphite/Application/src/Renderer/include/Graphite/Renderer/: Renderer.hpp
src/Graphite/Application/src/Renderer/src/: Renderer.cpp
src/Graphite/Application/src/Renderer/src/Backends/Metal/: MetalRenderer.hpp  MetalRenderer.mm
src/Graphite/Application/src/Renderer/src/Backends/Vulkan/: VulkanRenderer.cpp
src/Graphite/Common/: CMakeLists.txt  DynArray.hpp  DynamicLibrary.cpp  UniqueID.cpp  UniqueID.hpp
src/Graphite/Common/docs/: code.puml  interface.puml  state.puml
src/Graphite/Common/include/Graphite/Common/: DynArray.hpp  DynamicLibrary.hpp  Ref.hpp  TDoubleBufferedVector.hpp  TThreadSafeQueue.hpp  TWithFlags.hpp  UniqueID.hpp
src/Graphite/Common/include/Graphite/Common/DataStructures/: DynArray.hpp  TDoubleBuffer.hpp  TDoubleBufferedVector.hpp  TThreadSafeQueue.hpp
src/Graphite/Common/include/Graphite/Common/Plugin/: DynamicLibrary.hpp  GraphiteExport.hpp
src/Graphite/Common/include/Graphite/Common/UI/: FileDialog.hpp  ImGuiHelpers.hpp
src/Graphite/Common/include/Graphite/Common/Utility/: Ref.hpp  TAppAction.hpp  TWithFlags.hpp  UniqueID.hpp
src/Graphite/Common/src/: DynamicLibrary.cpp  FileDialog.cpp  ImGuiHelpers.cpp  UniqueID.cpp
src/Graphite/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/Graphite/Logger/Private/: LogFormatter.hpp
src/Graphite/Logger/docs/: code.puml  interface.puml  state.puml
src/Graphite/Logger/include/Graphite/: Logger.hpp
src/Graphite/Logger/src/: Ansi.cpp  Ansi.hpp  LogFormatter.cpp  LogFormatter.hpp  Logger.cpp
src/Graphite/Renderer/src/: Renderer.mm
src/Graphite/Renderer/src/Backends/Metal/: MetalRendererState.mm
src/Graphite/Renderer/src/Backends/Vulkan/: VulkanRenderer.hpp
src/Graphite/Settings/: CMakeLists.txt
src/Graphite/Settings/include/Graphite/Settings/: PersistentSettings.hpp  SettingsManager.hpp
src/Graphite/Settings/src/: PersistentSettings.cpp  SettingsManager.cpp
src/LogsPlugins/: CMakeLists.txt
src/Plugins/Logs/DummyPlugin/: CMakeLists.txt
src/Plugins/Logs/DummyPlugin/src/: DummyLogsPlugin.cpp
src/Plugins/Logs/RegexTextV1/: CMakeLists.txt
src/Plugins/Logs/RegexTextV1/src/: Filters.cpp  Lifecycle.cpp  Logs.cpp  RegexTextV1LogsPlugin.cpp  RenderMenu.cpp
(+63 files in other folders)
